very basic styles

--- a/views/index.erb
+++ b/views/index.erb
@@ -1,48 +1,54 @@
-<h2>Don't climehate</h2>
-<h3>- Appreciate</h3>
-
-<form action='/parse-form' method='post'>
-  <p>
-    <label for="statement">Statement link</label>
-    <input name="statement" id='statement'></input>
-  </p>
-  <p>
-    <label for="statement_date">Statement date</label>
-    <input type="date" name="statement_date" id='statement_date'>
-  </p>
-  <p>
-    <label for="bioguide">Politician</label>
-    <select name="bioguide">
-      <% @legislator_positions.each do |lp| %>
-        <option value="<%= lp['id']['bioguide']%>">
-          <%= lp['id']['name'] %>
-        </option>
-      <% end %>
-    </select>
-  </p>
-  <p>
-    <label for='exist'>Do they think climate change exists?</label>
-    <select name='exist'>
-      <option value='True'>Yes</option>
-      <option value='False'>No</option>
-      <option value='Nil'>Not clear</option>
-    </select>
-  </p>
-  <p>
-    <label for='exist'>Do they think that humans contribute to climate change?</label>
-    <select name='contribute'>
-      <option value='True'>Yes</option>
-      <option value='False'>No</option>
-      <option value='Nil'>Not clear</option>
-    </select>
-  </p>
-  <p>
-    <label for='evasive'>Was the politician's statement evasive?</label>
-    <select name='evasive'>
-      <option value='True'>Yes</option>
-      <option value='False'>No</option>
-      <option value='Nil'>Not clear</option>
-    </select>
-  </p>
-  <input type='submit'>
-</form>
+<html>
+  <head>
+    <title>Climate Wafflers</title>
+    <link rel="stylesheet" type="text/css" href="css/styles.css">
+  </head>
+  <body>
+    <img src="images/logo.png">
+    <form action='/parse-form' method='post'>
+      <p>
+        <label for="statement">Statement link</label>
+        <input name="statement" id='statement'></input>
+      </p>
+      <p>
+        <label for="statement_date">Statement date</label>
+        <input type="date" name="statement_date" id='statement_date'>
+      </p>
+      <p>
+        <label for="bioguide">Politician</label>
+        <select name="bioguide">
+          <% @legislator_positions.each do |lp| %>
+            <option value="<%= lp['id']['bioguide']%>">
+              <%= lp['id']['name'] %>
+            </option>
+          <% end %>
+        </select>
+      </p>
+      <p>
+        <label for='exist'>Do they think climate change exists?</label>
+        <select name='exist'>
+          <option value='True'>Yes</option>
+          <option value='False'>No</option>
+          <option value='Nil'>Not clear</option>
+        </select>
+      </p>
+      <p>
+        <label for='exist'>Do they think that humans contribute to climate change?</label>
+        <select name='contribute'>
+          <option value='True'>Yes</option>
+          <option value='False'>No</option>
+          <option value='Nil'>Not clear</option>
+        </select>
+      </p>
+      <p>
+        <label for='evasive'>Was the politician's statement evasive?</label>
+        <select name='evasive'>
+          <option value='True'>Yes</option>
+          <option value='False'>No</option>
+          <option value='Nil'>Not clear</option>
+        </select>
+      </p>
+      <input type='submit'>
+    </form>
+  </body
+</html>
